force-app/main/default/objects/clofor_com_cfs__TimeEntry__c/clofor_com_cfs__TimeEntry__c.object-meta.xml
<CustomObject>
    <description>Time Entry</description>
    <label>打刻記録</label>
    <nameField>
        <displayFormat>TE-{000000}</displayFormat>
        <label>TIME ENTRY ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>