force-app/main/default/objects/clofor_com_cfs__TimeEntry__c/fields/clofor_com_cfs__BusinessHoursStartTime__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BusinessHoursStartTime__c</fullName>
    <label>BUSINESS HOUR START TIME</label>
    <length>10</length>
    <type>Text</type>
</CustomField>