force-app/main/default/objects/clofor_com_cfs__TimeEntry__c/fields/clofor_com_cfs__EnterTime__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__EnterTime__c</fullName>
    <label>ENTER TIME</label>
    <type>DateTime</type>
</CustomField>