force-app/main/default/objects/clofor_com_cfs__TimeEntry__c/fields/clofor_com_cfs__LogDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LogDate__c</fullName>
    <formula>DATEVALUE( clofor_com_cfs__EnterTime__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOG DATE</label>
    <type>Date</type>
</CustomField>