force-app/main/default/objects/clofor_com_cfs__TimeEntry__c/fields/clofor_com_cfs__Notes__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Notes__c</fullName>
    <label>NOTES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>