force-app/main/default/objects/clofor_com_cfs__TimeEntry__c/fields/clofor_com_cfs__NotifyManager__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__NotifyManager__c</fullName>
    <defaultValue>true</defaultValue>
    <label>NOTIFY MANAGER</label>
    <type>Checkbox</type>
</CustomField>