force-app/main/default/objects/clofor_com_cfs__TimeEntry__c/fields/clofor_com_cfs__OT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OVERTIME WORKING</label>
    <type>Checkbox</type>
</CustomField>