force-app/main/default/objects/clofor_com_cfs__TimeEntry__c/fields/clofor_com_cfs__PublicHoliday__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PublicHoliday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PUBLIC HOLIDAY</label>
    <type>Checkbox</type>
</CustomField>